Updated intro page

--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
 									<strong>Financial Counselor</strong>&nbsp;turned<br />
 									<strong>Full Stack Software Engineer</strong>.
 								</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<p>I enjoy living a healthy lifestyle and progressive weight training <br />
+									but still (more than occasionally) trying out good eats.
+								</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">╲╱</a>
 							</footer>
 
 						</div>
