--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/avatar-cropped.jpg" alt="" /></span>
 							<h1 id="title">Vivian Chen</h1>
 							<p>Full Stack Software Engineer</p>
 						</div>
@@ -28,10 +28,10 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+								<li class="icon-container"><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+								<li class="icon-container"><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li class="icon-container"><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<li class="icon-container"><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
 
@@ -41,9 +41,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
+							<li><a href="https://github.com/vnchen92"  target=”_blank” class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/vivian-chen-8082169a/"  target=”_blank” class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://angel.co/u/vivian-chen-42"  target=”_blank” class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -96,12 +96,12 @@
 											<h3>Ipsum Feugiat</h3>
 										</header>
 									</article>
-									<article class="item">
+									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
 											<h3>Rhoncus Semper</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
@@ -110,12 +110,12 @@
 											<h3>Magna Nullam</h3>
 										</header>
 									</article>
-									<article class="item">
+									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Natoque Vitae</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
@@ -124,12 +124,12 @@
 											<h3>Dolor Penatibus</h3>
 										</header>
 									</article>
-									<article class="item">
+									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
 											<h3>Orci Convallis</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 							</div>
 
