--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Vivian Chen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -83,15 +83,12 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Some projects I have been working on for the past couple of months. Feel free to browse and explore!</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/linealert-screenshot.jpg" alt="" /></a>
+										<a href="https://aa-linealert.herokuapp.com/#/" target="_blank" class="image fit"><img src="images/linealert-screenshot.jpg" alt="" /></a>
 										<header>
 											<h3>LineAlert</h3>
 										</header>
@@ -105,7 +102,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/strive-screenshot.jpg" alt="" /></a>
+										<a href="https://strive-for-strides.herokuapp.com/#/" target="_blank" class="image fit"><img src="images/strive-screenshot.jpg" alt="" /></a>
 										<header>
 											<h3>Strive</h3>
 										</header>
@@ -119,7 +116,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/js-screen-shot.jpg" alt="" /></a>
+										<a href="https://vnchen92.github.io/calorie_calc/" target="_blank" class="image fit"><img src="images/js-screen-shot.jpg" alt="" /></a>
 										<header>
 											<h3>Eat Deliberately</h3>
 										</header>
@@ -144,14 +141,11 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/about-me-cropped.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I have always enjoyed problem solving and challenging myself so I am grateful to be able to do that in software development. I am happiest when I am in the zone and have a tangible goal when building an application or feature from start to finish. As a full stack software developer, I have enjoyed using JavaScript, React/Redux, CSS, HTML, Ruby on Rails, PostgreSQL, Mongoose, and MongoDB in my projects.
+
+								When I am not solidifying my skillset in coding, you can find me at the gym or eating everything!</p>
 
 						</div>
 					</section>
