added skills and updated project links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Vivian Chen</title>
+		<link rel="icon" type="image/x-icon" href="/images/favicon-girl.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,10 +29,11 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="icon-container"><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li class="icon-container"><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li class="icon-container"><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li class="icon-container"><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#skills" id="skills-link"><span class="icon regular fa-lightbulb">Skills</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
 
@@ -41,10 +43,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://github.com/vnchen92"  target=”_blank” class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/vnchen92"  target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://www.linkedin.com/in/vivian-chen-8082169a/"  target=”_blank” class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://angel.co/u/vivian-chen-42"  target=”_blank” class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<!-- <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
+							<li><a href="/images/Vivian-Chen-Resume.pdf" target="_blank" class="icon regular fa-sticky-note" download="Vivian Chen Resume"><span class="label">Resume</span></a></li>
 						</ul>
 
 				</div>
@@ -83,58 +86,75 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Some projects I have been working on for the past couple of months. Feel free to browse and explore!</p>
+							<p>Some projects I have been working on for the past couple of months. I am in the midst of adding additional features to them.</p> 
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://aa-linealert.herokuapp.com/#/" target="_blank" class="image fit"><img src="images/linealert-screenshot.jpg" alt="" /></a>
+										<a href="https://aa-linealert.herokuapp.com/#/" target="_blank" class="image fit"><img src="images/linealert-full.jpg" alt="" /></a>
 										<header>
 											<h3>LineAlert</h3>
 										</header>
 									</article>
-									<!-- <article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<article class="item">
+										<!-- <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a> -->
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3><a href="https://github.com/vnchen92/LineAlert"  target="_blank" class="icon brands fa-github"></a>&nbsp;||&nbsp;<a href="https://aa-linealert.herokuapp.com/#/">live</a></h3>
 										</header>
-									</article> -->
+									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://strive-for-strides.herokuapp.com/#/" target="_blank" class="image fit"><img src="images/strive-screenshot.jpg" alt="" /></a>
+										<a href="https://strive-for-strides.herokuapp.com/#/" target="_blank" class="image fit"><img src="images/strive-full.jpg" alt="" /></a>
 										<header>
 											<h3>Strive</h3>
 										</header>
 									</article>
-									<!-- <article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<article class="item">
+										<!-- <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a> -->
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3><a href="https://github.com/vnchen92/strive"  target="_blank" class="icon brands fa-github"></a>&nbsp;||&nbsp;<a href="https://strive-for-strides.herokuapp.com/#/">live</a></h3>
 										</header>
-									</article> -->
+									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://vnchen92.github.io/calorie_calc/" target="_blank" class="image fit"><img src="images/js-screen-shot.jpg" alt="" /></a>
+										<a href="https://vnchen92.github.io/calorie_calc/" target="_blank" class="image fit"><img src="images/js-better-full.jpg" alt="" /></a>
 										<header>
 											<h3>Eat Deliberately</h3>
 										</header>
 									</article>
-									<!-- <article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+									<article class="item">
+										<!-- <a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a> -->
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3><a href="https://github.com/vnchen92/calorie_calc"  target="_blank" class="icon brands fa-github"></a>&nbsp;||&nbsp;<a href="https://vnchen92.github.io/calorie_calc/">live</a></h3>
 										</header>
-									</article> -->
+									</article>
 								</div>
 							</div>
+							<br/>
+							<p>Feel free to browse and explore!</p>
+
+						</div>
+					</section>
+
+				<!-- Skills -->
+					<section id="skills" class="three">
+						<div class="container">
+
+							<header>
+								<h2>Skills</h2>
+							</header>
+
+							<a href="" class="image featured"><img src="images/skills-banner-cropped.jpg" alt="Web development vector created by katemangostar - www.freepik.com" /></a>
+
+							<p>I have enjoyed using JavaScript, React/Redux, CSS, HTML, Ruby on Rails, PostgreSQL, Mongoose, and MongoDB in my projects.</p>
 
 						</div>
 					</section>
 
 				<!-- About Me -->
-					<section id="about" class="three">
+					<section id="about" class="four">
 						<div class="container">
 
 							<header>
@@ -143,7 +163,7 @@
 
 							<a href="#" class="image featured"><img src="images/about-me-cropped.jpg" alt="" /></a>
 
-							<p>I have always enjoyed problem solving and challenging myself so I am grateful to be able to do that in software development. I am happiest when I am in the zone and have a tangible goal when building an application or feature from start to finish. As a full stack software developer, I have enjoyed using JavaScript, React/Redux, CSS, HTML, Ruby on Rails, PostgreSQL, Mongoose, and MongoDB in my projects.
+							<p>I have always enjoyed problem solving and challenging myself so I am grateful to be able to do that in software development. I am happiest when I am in the zone and have a tangible goal when building an application or feature from start to finish.
 
 								When I am not solidifying my skillset in coding, you can find me at the gym or eating everything!</p>
 
@@ -151,16 +171,21 @@
 					</section>
 
 				<!-- Contact -->
-					<section id="contact" class="four">
+					<section id="contact" class="five">
 						<div class="container">
 
 							<header>
 								<h2>Contact</h2>
 							</header>
 
-							<!-- <p>Feel free to reach out to me:</p> -->
+							<p>Feel free to reach out to me on any platform:</p>
+							<br/>
 
-							<form method="post" action="mailto:vnchen92@gmail.com" enctype="multipart/form-data">
+							<p>Phone: 646-209-4763</p>
+							<br/>
+							<p>Email: vnchen92@gmail.com</p>
+
+							<!-- <form method="post" action="mailto:vnchen92@gmail.com" enctype="multipart/form-data">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
@@ -171,7 +196,7 @@
 										<input type="submit" value="Send Message" />
 									</div>
 								</div>
-							</form>
+							</form> -->
 
 						</div>
 					</section>
