added online presence to contact

--- a/index.html
+++ b/index.html
@@ -179,11 +179,14 @@
 							</header>
 
 							<p>Feel free to reach out to me on any platform:</p>
-							<br/>
-
 							<p>Phone: 646-209-4763</p>
-							<br/>
 							<p>Email: vnchen92@gmail.com</p>
+							<ul class="icons">
+								<li><a href="https://github.com/vnchen92"  target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/vivian-chen-8082169a/"  target=”_blank” class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://angel.co/u/vivian-chen-42"  target=”_blank” class="icon brands fa-angellist"><span class="label">AngelList</span></a></li>
+								<li><a href="/images/Vivian-Chen-Resume.pdf" target="_blank" class="icon regular fa-sticky-note" download="Vivian Chen Resume"><span class="label">Resume</span></a></li>
+							</ul>
 
 							<!-- <form method="post" action="mailto:vnchen92@gmail.com" enctype="multipart/form-data">
 								<div class="row">
