added skills icons

--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
 							</header>
 
 							<a href="" class="image featured"><img src="images/skills-banner-cropped.jpg" alt="Web development vector created by katemangostar - www.freepik.com" /></a>
+							<div>
+								
+							</div>
 
 							<p>I have enjoyed using JavaScript, React/Redux, CSS, HTML, Ruby on Rails, PostgreSQL, Mongoose, and MongoDB in my projects.</p>
 
