removed zone identifiers

--- a/index.html
+++ b/index.html
@@ -148,7 +148,14 @@
 
 							<a href="" class="image featured"><img src="images/skills-banner-cropped.jpg" alt="Web development vector created by katemangostar - www.freepik.com" /></a>
 							<div>
-								
+								<img src="images/react.png" alt="">
+								<img src="images/redux.png" alt="">
+								<img src="images/node.png" alt="">
+								<img src="images/mongodb.png" alt="">
+								<img src="images/css.png" alt="">
+								<img src="images/html.png" alt="">
+								<img src="images/ruby.png" alt="">
+								<img src="images/rails.png" alt="">
 							</div>
 
 							<p>I have enjoyed using JavaScript, React/Redux, CSS, HTML, Ruby on Rails, PostgreSQL, Mongoose, and MongoDB in my projects.</p>
