updated about me

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Vivian Chen</strong>,<br />
 									<strong>Financial Counselor</strong>&nbsp;turned<br />
-									<strong>Full Stack Software Engineer</strong>.
+									<strong>Software Engineer</strong>.
 								</h2>
 								<p>I enjoy living a healthy lifestyle and progressive weight training <br />
 									but still (more than occasionally) trying out good eats.
