updated strive live link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://strive-for-strides.herokuapp.com/#/" target="_blank" class="image fit"><img src="images/strive-full.jpg" alt="" /></a>
+										<a href="https://strive-service.onrender.com/#/" target="_blank" class="image fit"><img src="images/strive-full.jpg" alt="" /></a>
 										<header>
 											<h3>Strive</h3>
 										</header>
