--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://strive-service.onrender.com/#/" target="_blank" class="image fit"><img src="images/strive-full.jpg" alt="" /></a>
+										<a href="https://strive-service.onrender.com" target="_blank" class="image fit"><img src="images/strive-full.jpg" alt="" /></a>
 										<header>
 											<h3>Strive</h3>
 										</header>
@@ -113,7 +113,7 @@
 									<article class="item">
 										<!-- <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a> -->
 										<header>
-											<h3><a href="https://github.com/vnchen92/strive"  target="_blank" class="icon brands fa-github"></a>&nbsp;||&nbsp;<a href="https://strive-for-strides.herokuapp.com/#/">live</a></h3>
+											<h3><a href="https://github.com/vnchen92/strive"  target="_blank" class="icon brands fa-github"></a>&nbsp;||&nbsp;<a href="https://strive-service.onrender.com">live</a></h3>
 										</header>
 									</article>
 								</div>
