--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://aa-linealert.herokuapp.com/#/" target="_blank" class="image fit"><img src="images/linealert-full.jpg" alt="" /></a>
+										<a href="https://aa-linealert.onrender.com/#/" target="_blank" class="image fit"><img src="images/linealert-full.jpg" alt="" /></a>
 										<header>
 											<h3>LineAlert</h3>
 										</header>
@@ -99,7 +99,7 @@
 									<article class="item">
 										<!-- <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a> -->
 										<header>
-											<h3><a href="https://github.com/vnchen92/LineAlert"  target="_blank" class="icon brands fa-github"></a>&nbsp;||&nbsp;<a href="https://aa-linealert.herokuapp.com/#/">live</a></h3>
+											<h3><a href="https://github.com/vnchen92/LineAlert"  target="_blank" class="icon brands fa-github"></a>&nbsp;||&nbsp;<a href="https://aa-linealert.onrender.com/#/">live</a></h3>
 										</header>
 									</article>
 								</div>
